# ChangeLog for app-misc/reptyr
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/reptyr/ChangeLog,v 1.13 2013/07/28 10:53:25 jlec Exp $

  28 Jul 2013; Justin Lecher <jlec@gentoo.org> -reptyr-0.4.ebuild,
  metadata.xml:
  Drop old

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> reptyr-0.5.ebuild:
  Stable for x86, wrt bug #477562

  21 Jul 2013; Agostino Sarubbo <ago@gentoo.org> reptyr-0.5.ebuild:
  Stable for amd64, wrt bug #477562

*reptyr-0.5 (10 Jun 2013)

  10 Jun 2013; Tim Harder <radhermit@gentoo.org> +reptyr-0.5.ebuild:
  Version bump.

  29 May 2013; Tim Harder <radhermit@gentoo.org> reptyr-0.4.ebuild:
  Respect CFLAGS (bug #471634 by jer).

  04 Dec 2012;  <ago@gentoo.org> reptyr-0.4.ebuild:
  Stable for x86, wrt bug #440830

  25 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> reptyr-0.4.ebuild:
  Stable on amd64, wrt bug #440830

  24 Nov 2012; Tim Harder <radhermit@gentoo.org> -reptyr-0.3.ebuild:
  Remove old.

*reptyr-0.4 (23 Aug 2012)

  23 Aug 2012; Tim Harder <radhermit@gentoo.org> +reptyr-0.4.ebuild:
  Version bump.

  23 Jul 2012; Steev Klimaszewski <steev@gentoo.org> reptyr-0.3.ebuild:
  Add ~arm keyword. Tested on a Genesi EfikaMX (armv7) and a CompuLab Trimslice
  (also armv7)

  17 Jul 2011; Justin Lecher <jlec@gentoo.org> reptyr-0.3.ebuild:
  Make it prefix ready

  02 Jun 2011; Tim Harder <radhermit@gentoo.org> reptyr-0.3.ebuild:
  Use append-cflags explicitly instead of append-flags.

*reptyr-0.3 (02 Jun 2011)

  02 Jun 2011; Tim Harder <radhermit@gentoo.org> +reptyr-0.3.ebuild,
  +metadata.xml:
  Initial import from sunrise (bug #357981). Thanks to Michael Orlitzky for
  some of the initial ebuild work.