@@ -1,24 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST reptyr-0.5.tar.gz 16150 SHA256 b58bff5e06096ce4409983cce85fabc1280ed4115c478c0fec968ce2a4dcec1c SHA512 d38d5986b38c643a2c04429e23d5af0cbd7280ed709c441cf0e217f4fe0e4fd19d7ecb76817aedcf9a2092a8041e22aa77828c07e0cea010478192085b1d8f4b WHIRLPOOL 19fdb5f35b05c2f03ab5af1cc2e2b1510733f1b54d6af6bb14db31185f432df5ff7515b1b36207b976ca5beb2649ca7a1c51d52cb0827280e62bedd05e965726
+DIST reptyr-0.6.tar.gz 27802 SHA256 71a4f87da228807e540d688b1446d9ba28556e02a9a63175981f66bb39f1049b SHA512 f862644dc2008b7b39f3ef3eca26abc5651d32c9dfb8d2d3b7b9e2f310ebf481a82a95f00417ab87d52f475aea03bdcebeb00e0499e9a0ec89f1f816b96a7f9d WHIRLPOOL 58b995f3799a650a88a44a813356dee4ce6267f314cd5ce797c4452e70e60549756d7b846b5c16ad4007ad09252ac80c6fdde442c5d43dc76bca3cc145dc6107
 EBUILD reptyr-0.5.ebuild 797 SHA256 0df5d1ef58203a0e1e21abc2b1cf3a2108b2bbee2e32746c9552c612f41d30c6 SHA512 2277e51df0baa6d1c92292c9ff59b6a52309339526b9a4e3bc186ade8378b835d2543c3aac71a7d688075054f29fb4700243fdbd9fe3464cb8f3bee6a5780f22 WHIRLPOOL f8c18a5ec5e87705ac400ed2f4f939a7e2606ebf9718d746ffdabced251acafb6084afc41900e2ea9de0a3e79f2a144cc046575c4eb862b8a05245cd83923b07
-MISC ChangeLog 1722 SHA256 7490c91032026a9f512a46c9c81f58485dd1faa53bfc2e8ff4295799963037f3 SHA512 c0822f6f6cce7130c989d80451a9773cadc261447f77d89936f78c019f7bd9d623da62e98230b646b9eea9dda5b3309cc1a11b40607ba87152a6a912f2447580 WHIRLPOOL f97d12aa9a294561cb4eb193be182671cb7f7b148ff94b3679526dc9a2cc658d21fbdb7cc3d2c19ed9899eb0170ea362afbc2107686823bfaea834373bd9b912
+EBUILD reptyr-0.6.ebuild 822 SHA256 34c2624238cccb5d37bc76e0acde107ace77c17381528cdee825a6fd1a7c078f SHA512 775eb33994e7b5777674955f8e4253b0fe3368eaebc330f41db7537343fabae3729a0c7066760fd4f924351107bb03af78809d4fb2d35ec30148a83c46e069a8 WHIRLPOOL ea9180cb1ec93c79900e448ca654617d0afbc4c0afab7d17855cdf97c6bf3f3913bed376837a5c46d192cd18832272cbdef4adad3319a2573e1edc99cd965ec8
+MISC ChangeLog 1840 SHA256 78e0ee867ee6d68c3ad5aee5db15ae3770c9bd688caaafef80a3a43067233caa SHA512 24a63dfd34a08cd4894b0e183c78c9fdd9fe6a7aa5b181a47cca3c29dcf1de50372ebc3085f91a0112ebe17edbea21ca203d96c5d9b0ca522b186c62c155fc50 WHIRLPOOL 156c3450eb01a28ca3bea740011534df9407e6593bc702994716707d46ab0a688577abe80a9eb997cccdbc9db304f0031187099d0c8a248c85b94cff92865293
 MISC metadata.xml 265 SHA256 7cd130c0826e5ea1eb69adecdd5d3b2cbca00e0ac096d1d7efffe8dbe180767a SHA512 c880086868037b5aa80aea37b7b90dfdedc7fccf3d5fda6b73cd79ce95228501e0ca5fdd3181a3cfe5de52e8c19d864643e17b563dc54a8eae4c030a4559653a WHIRLPOOL 576cc2dbb0d088a75e1e09ff7532ce5fd7037ef191f7cbed2fae618fed4dff2b124efbce75026005ce68f4aeaac83fc8bac7fce4cf9346eeabe16008e134c846
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCgAGBQJR9PgmAAoJELnU8jG9FVirrV4P/3680LrOejsWrGWXDOtudxmn
-pfOKEO7a4Hu+CErfnXjS6yZvvjkatRTovUZQtzIH0RD7NkrJwk6gxhUDYLqWxbpv
-ViZThAMnNPcZ5Tt5CHIk7Woa78t8y6ZtB5cRbh2YIZg4CHuKU/+Aqt5ju36QwKdO
-8sJPAAmuhVmK6tQmd00YwWvOuO2uUob/VMFUxBWul02Ug+oUKDiQd/cKnuuVniXx
-AH+rMaYcIUNTY82Q9jY8UI8FvZNoj5VPmueER3yRh5HtqapZpPryogVS+exIhSgH
-NQucGbOIEiu+y27crbdp4hm6K2ftjPqaCsye+Tn6G5REFc6ycSEWACVt62MeZZ9+
-6xZvrcn6X3gsnkCRynVryqoOvl5t2/71y9oYWVGTeG0SFCG273lnfVtpEo0oY8kO
-8Yd66BQbW2i6/BG+x4A+FzYTdC3RGw+ZH8GpCkYaHpuR/su1VhYwIUFUYsmw79FU
-92ZVnthjsEw8M6zk92d/Y+pymgpLj1RhqetISev3IkreBlvWzLdlYkinRHg3P/tJ
-9xMclzfnQ00ovlnSWxescsWVITbl4mcytM8lDQWmcUCkyzJRO7cQs6pRtjdtDOmb
-hnAF+nctKFcY8C5HErD19wC5Yc/v61LY8YQpJJJXXRkFoGypLAGbRmCdcvDPDxWi
-NV915KZNxwgoy1X9EzEn
-=J5+m
+iQEcBAEBCAAGBQJUrAYKAAoJEEqz6FtPBkyjOX8H/imdrl62Gc+yM9L4Wiw9fb/p
+RG1kI1FvJ4ccFXcmnpOnRSKjciCXOFoGRvwQD63mEX4kyK0dNXRiEoiNzDz1nSmC
+OTKK8W0eNJJgmfehjnke49uPxoXnslukqxZ43nxch9+8UKVEKZPboQR+9SJqHdcP
+ZAtkorunPzQV3gKJw2WR3NgHm1p2jSjr3NnWOd9E13MzqjCLb3wpX0qFeF6wVp6L
+EG1PTfWYVxGIi7FDNnkqqQVfNWMTtsj8IFsOilsu361BhGCisInKRcvOEFMjUSyZ
+N0XE92UiXuPEGmK/UiL+nxoPpTOfbacFVTW4/PHNncRG/lqAIFDHvFwlWc/sNjo=
+=a4E0
 -----END PGP SIGNATURE-----
