@@ -1,0 +1,11 @@
+DEFINED_PHASES=compile install prepare unpack
+DESCRIPTION=A utility to attach a running program to a new terminal
+EAPI=5
+HOMEPAGE=https://github.com/nelhage/reptyr
+KEYWORDS=~amd64 ~arm ~x86 ~amd64-linux ~x86-linux
+LICENSE=MIT
+RESTRICT=test
+SLOT=0
+SRC_URI=https://github.com/nelhage/reptyr/archive/reptyr-0.6.tar.gz
+_eclasses_=eutils	f99a767f569b1f0731b3a1edd17c1d11	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66
+_md5_=b1f48b12b2c15d31bdbb43cd9416ac2c
