@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/reptyr
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/reptyr/ChangeLog,v 1.13 2013/07/28 10:53:25 jlec Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/reptyr/ChangeLog,v 1.14 2015/01/06 15:57:59 radhermit Exp $
+
+*reptyr-0.6 (06 Jan 2015)
+
+  06 Jan 2015; Tim Harder <radhermit@gentoo.org> +reptyr-0.6.ebuild:
+  Version bump.
 
   28 Jul 2013; Justin Lecher <jlec@gentoo.org> -reptyr-0.4.ebuild,
   metadata.xml:
